services/ping-delivery/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-delivery
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ping-delivery
  ports:
    - name: http
      port: 80
      targetPort: http
